# oop-2026

./: .clang-format  .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt
lab1/Crypt/: CMakeLists.txt  Crypt.cpp
lab1/Invert/: CMakeLists.txt  Invert.cpp  MatrixMath.cpp  MatrixMath.hpp  exceptions.hpp  main.cpp
lab1/Invert/tests/: invalid_format.txt  matrix.txt
lab1/Labyrinth/: CMakeLists.txt  Labyrinth.cpp  Labyrinth.hpp  WaveAlgorithm.cpp  WaveAlgorithm.hpp  main.cpp
lab1/Labyrinth/tests/: labyrinth-2-expected.txt  labyrinth-3-expected.txt
lab1/Radix/: CMakeLists.txt  Radix.cpp
lab1/Replace/: CMakeLists.txt  Replace  Replace.cpp
lab1/Replace/tests/: compare_normalized.cmake  help_output.txt  normalize_and_diff.sh  replce_with_endl.txt  run_tests.sh
lab2/: CMakeLists.txt
lab2/string/: CMakeLists.txt  HtmlDecode.cpp  HtmlDecode.hpp  main.cpp
lab2/string/tests/: CMakeLists.txt  tests.cpp
lab2/vector/: CMakeLists.txt  Numbers.cpp  Numbers.hpp  main.cpp
lab2/vector/tests/: CMakeLists.txt  tests.cpp
